--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "artifactory-npm-setup",
   "version": "1.0.2",
-  "description": "setting up your npmrc in a sane mannor",
-  "bin": "./bin/start.sh",
+  "description": "setting up your npmrc in a sane manor",
+  "bin": "./bin/start.js",
   "main": "index.js",
   "scripts": {
     "start": "electron .",
