--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "command-line-args": "^5.1.1",
-    "command-line-usage": "^5.0.5",
+    "command-line-usage": "^5.0.5"
+  },
+  "optionalDependencies": {
     "electron": "^5.0.3"
   }
 }
